ADD // ATIVIDADE14 DAO